syntax = "proto3";

package user;
option go_package = "api/user/pb";

message CreateVerifyCodeReq {
	string PhoneNum = 1; //手机号
}

message CreateVerifyCodeRsp {
}

message LoginByPhoneReq {
	string PhoneNum =   1;   //手机号
		string UserName = 2;
		string VerifyCode = 3;
}

message TokenResp {
		string Token     = 1;
		string PhoneNum  = 2;//手机号
		string UserName  = 3;
}

service User {
	rpc CreateVerifyCode(CreateVerifyCodeReq) returns(CreateVerifyCodeRsp);
	rpc LoginByPhone(LoginByPhoneReq) returns(TokenResp);
}

